src/airflow/kubernetes/namespace.yaml
# Airflow Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: airflow-dev
  labels:
    name: airflow-dev
    environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: airflow-prod
  labels:
    name: airflow-prod
    environment: prod
